Fixed IE10's awkward scrollbar being awkward

--- a/MyOnTimeTeam/Content/Site.css
+++ b/MyOnTimeTeam/Content/Site.css
@@ -882,3 +882,7 @@ tr.pager td {
 #masterDropdown{
     text-align: left;
 }
+
+.ie10{
+    padding-right: 16px;
+}
